samples/_failures_safe/1761349946_5a8019_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4d9bee87.c: In function ‘main’:
./samples/SAFE/__tmp_4d9bee87.c:173:5: error: expected expression at end of input
  173 |     if (!
      |     ^~
./samples/SAFE/__tmp_4d9bee87.c:173:5: error: expected declaration or statement at end of input
